Explain and configure semi-auto tracker.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -185,8 +185,8 @@
 % \input{src/Chapter4.tex}
 
 % % Feature, tags and tables.
-% \newpage
-% \input{src/Chapter5.tex}
+\newpage
+\input{src/Chapter5.tex}
 
 \newpage
 \input{src/Chapter6.tex}
