--- a/src/Chapter2.tex
+++ b/src/Chapter2.tex
@@ -237,6 +237,7 @@ This also implies that in Mastodon, we cannot segment complex shapes, or object 
 This is an important limitation of Mastodon.
 
 For now, select the \textbf{DoG detector} and click \menu{\smallimg{arrow_right.png} Next}.
+\label{Detection_Cells_DoG_Detector}
 
 Here is briefly  how it works.
 The LoG detector, and its approximation the DoG detector, is the best detector for blob-like particles in the presence of noise~\cite{Sage2005}. 
