--- a/src/Chapter5.tex
+++ b/src/Chapter5.tex
@@ -211,6 +211,7 @@ This is the role of the table view, but before getting to it, we will make a lit
 
 
 \subsubsection{Coloring views by numerical features.}
+\label{Configure_Color_Modes}
 
 We have seen above that tag-sets could be used to generate coloring of the data items shown in a view. 
 Indeed, in the \menu{View > Coloring} menu of each view, that tag-sets are listed and when selected, are used to assign a color to each data item.
