More on the semi-auto tracker use cases.

--- a/src/Chapter6.tex
+++ b/src/Chapter6.tex
@@ -172,10 +172,60 @@ Once the tracking was done, they used feature analysis to extract fluorescence i
 \end{figure}
 
 
+\subsubsection{Stitching small track segments.}
 
+The semi-automated tracker can be used with the same configuration to stitch small track segments, which follow the same cell but are separated and spread in time. 
+This might be caused linking with missing detections, and the situation could resemble what is pictured in Figure~\ref{fig:Tracklets}.
 
-\subsubsection{Patching small track segments.}
+We can use the semi-automated tracker to connect them, and add the missing detections.
+We want the tracker to create spots for the cell in time-points when they are missing, and to connect to existing ones it will find by following the cell.
+To allow this, we must enable first the '\texttt{Link even if target has outgoing links}' setting, so that the tracker does not stop when it meets a spot that is at the beginning of a track segment.
+Second, we must enable the '\texttt{Continue tracking if source and target spots are already linked}' setting.
+If we do not, the tracker will stop after connecting the first track segment it meets. 
+Finally, we have to increase the value of the '\texttt{N time-points}' parameter, so that the tracker iterate through the full movie. 
+After doing this and tracking for the first cell, we get a single track (Figure~\ref{fig:StitchedTracklets}).
+
+\begin{figure}
+    \centering
+    \null\hfill
+    \includegraphics[height=0.2\textheight]{figures/Mastodon_Tracklets_01.png}
+    \hfill
+    \includegraphics[height=0.2\textheight]{figures/Mastodon_Tracklets_02.png}
+    \hfill\null
+    \caption{Small discontinuous track segments following a single cell.}
+    \label{fig:StitchedTracklets}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \null\hfill
+    \includegraphics[height=0.2\textheight]{figures/Mastodon_Tracklets_03.png}
+    \hfill
+    \includegraphics[height=0.2\textheight]{figures/Mastodon_Tracklets_04.png}
+    \hfill
+    \includegraphics[height=0.2\textheight]{figures/Mastodon_Tracklets_05.png}
+    \hfill\null
+    \caption{Results of stitching the track segments with the semi-automated tracker. Notice the messages on the log window that state what the tracker did when it meets existing spots.}
+    \label{fig:Tracklets}
+\end{figure}
 
 \subsubsection{Backtracking, branching on cell divisions. }
+
+Backtracking is particularly useful when creating lineages of cells that divide often in the movie.
+Another application is in mapping differentiated cells at a late time-point, to the position of their progenitors at the beginning of the movie. 
+For this we typically starts from an empty annotation, select a cell of interest in a late time-point, and backtrack it to its position in the beginning of the movie.
+The built-in configuration called \textbf{Backtracking} is made for this.
+If the cell we backtrack divided several times during the movie, might be creating tracks for sibling cells.
+We want these tracks to branch properly in case we meet the mother cell when it divides.
+
+This is why we need to enable the '\texttt{Link even if target has outgoing links}' setting, but no other.
+Suppose we already have one track for a cell that divides, following the mother cell then one of the daughter cells. 
+When we will backtrack from the other daughter cell, late in the movie, we will meet the division point of the mother cell. 
+There is an existing spot there, just before the cell divides. 
+It has already an outgoing link (to the first daughter we already tracked), and we want to connect to it. 
+Hence we enable the '\texttt{Link even if target has outgoing links}' setting.
+Because we want to stop tracking there (the rest of the track is good already), we do not enable any of the two other settings.
+
+
 
 \subsubsection{Sparse linking over dense spots.}
